--- a/Fishing.html
+++ b/Fishing.html
@@ -7,12 +7,12 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="HandheldFriendly" content="true">
-<link rel="stylesheet" href="Assets/css/style.css">
-<link rel="stylesheet" href="Assets/css/dropbox.css">
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/dropbox.css">
 <body>
 	<div id="wrapper">
 		<div class="navbar">
-			<a href="Home.html">Home</a>
+			<a href="index.html">Home</a>
 			<div class="dropdown">
 				<button class="dropbtn">Category
 					<i class="fa fa-caret-down"></i>
@@ -38,8 +38,8 @@
 				you are looking for Big Game Fishing or something more along the lines of
 				a quiet fly-fishing trip. Cape Town also offers both saltwater and freshwater
 				fishing options, raging sea fishing or quiet rivers, streams and trout fishing in dams.</p>
-				<img src="Assets/image/Fishing1.jpeg" alt="Fishing">
-				<img src="Assets/image/Fishing2.jpeg" alt="Fishing">
+				<img src="image/Fishing1.jpeg" alt="Fishing">
+				<img src="image/Fishing2.jpeg" alt="Fishing">
 				<br>
 				<h2>Fishing</h2>
 				<p>Fishing in Cape Town with Hooked On Africa is perfect for those who want to charter
@@ -49,15 +49,15 @@
 					located in one of the richest fishing grounds left in the world today. With a large
 					selection of boats to charter, an array of different fishing equipment & tackle,
 					we are the ultimate Fishing Charter Company in Cape Town</p>
-					<img src="Assets/image/Fishing3.jpg" alt="FishingFishing">
-					<img src="Assets/image/Fishing4.jpg" alt="Fishing">
+					<img src="image/Fishing3.jpg" alt="FishingFishing">
+					<img src="image/Fishing4.jpg" alt="Fishing">
 					<h2>Simon's Town pier</h2>
 					<p>The Cape waters offer some of the richest fishing grounds in the world and
 						BIG BLUE SPORT FISHING CHARTERS is privileged to be located in these premium
 						fishing grounds, with quick and easy access to the tuna grounds and Cape Point,
 						famous for yellowtail fishing.</p>
-						<img src="Assets/image/Fishing5.jpg" alt="Fishing">
-						<img src="Assets/image/Fishing6.jpg" alt="Fishing">
+						<img src="image/Fishing5.jpg" alt="Fishing">
+						<img src="image/Fishing6.jpg" alt="Fishing">
 						<footer>Website designed by Rustin Cassiem</footer>
 
 					</div>
