--- a/Rock_Climbing.html
+++ b/Rock_Climbing.html
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="HandheldFriendly" content="true">
-  <link rel="stylesheet" href="Assets/css/style.css">
-  <link rel="stylesheet" href="Assets/css/dropbox.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/dropbox.css">
   <body>
     <div id="wrapper">
   		<div class="navbar">
-  			<a href="Home.html">Home</a>
+  			<a href="index.html">Home</a>
   			<div class="dropdown">
   				<button class="dropbtn">Category
   					<i class="fa fa-caret-down"></i>
@@ -36,8 +36,8 @@
            an intermediate climber wanting to improve your grades and technique,
            or an experienced climber needing somewhere to get in some focused
            training, you’ve come to the right place!</p>
-       <img src="Assets/image/rock1.jpg" alt="indoor climbing">
-       <img src="Assets/image/Rock2.jpg" alt="indoor climbing ">
+       <img src="image/rock1.jpg" alt="indoor climbing">
+       <img src="image/Rock2.jpg" alt="indoor climbing ">
        <br>
        <h2>Cape Town Rocks</h2>
         <p>Get ready to rock at CityROCK indoor climbing gym in Cape Town. With hundreds of routes,
@@ -48,8 +48,8 @@
            landing spots that jut out from the ‘rock’ surface you feel a sense of power.
            An overwhelming determination to climb and keep climbing sets in and you’re
            off to reach your own personal summit.</p>
-        <img src="Assets/image/Rock3.jpg" alt="indoor climmbing">
-        <img src="Assets/image/Rock4.jpg" alt="indoor climbing ">
+        <img src="image/Rock3.jpg" alt="indoor climmbing">
+        <img src="image/Rock4.jpg" alt="indoor climbing ">
 
         <h2>Venture Forth International </h2>
         <p>Table Mountain offers rock climbers of all abilities world-class routes on high quality rock.
@@ -59,8 +59,8 @@
            climbing is mostly on sandstone but there are some granite crags scattered around the Peninsula and Winelands.
            enture Forth offers climbers the chance to experience Table Mountain and the surrounding crags in safety
             with a qualified rock climbing guide. Various options available from half-day sport climbing to full-day trad</p>
-        <img src="Assets/image/Rock5.jpg" alt="outdoor climmbing">
-        <img src="Assets/image/Rock6.jpg" alt="outdoor climbing ">
+        <img src="image/Rock5.jpg" alt="outdoor climmbing">
+        <img src="image/Rock6.jpg" alt="outdoor climbing ">
     </div>
   </body>
 </html>
