--- a/Camping.html
+++ b/Camping.html
@@ -4,12 +4,12 @@
 	<meta charset="utf-8">
 	<title>Camping</title>
 </head>
-<link rel="stylesheet" href="Assets/css/style.css">
-<link rel="stylesheet" href="Assets/css/dropbox.css">
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/dropbox.css">
 <body>
 	<div id="wrapper">
 		<div class="navbar">
-			<a href="Home.html">Home</a>
+			<a href="index.html">Home</a>
 			<div class="dropdown">
 				<button class="dropbtn">Category
 					<i class="fa fa-caret-down"></i>
@@ -31,8 +31,8 @@
 			the tents are erected on your behalf, saving you the trouble of lugging
 			around heavy camping gear and making for a more comfortable camping adventure
 			that borders on glamping.</p>
-			<img src="Assets/image/camping1.jpg" alt="Camping site">
-			<img src="Assets/image/Camping2.jpg" alt="Camping site">
+			<img src="image/camping1.jpg" alt="Camping site">
+			<img src="image/Camping2.jpg" alt="Camping site">
 			<br>
 			<h2>Slanghoek mountain resort</h2>
 			<p>Nestled in the magnificent Slanghoek Valley on the slopes of the Badsberg conservancy
@@ -41,16 +41,16 @@
 				adventure filled walks for nature lovers. To accommodate you, we have self catering
 				chalets and a tented camp as well as camping with own tent or caravan. This valley
 				can be visited throughout the year as each season reveals its own secret beauty.</p>
-				<img src="Assets/image/Camping3.jpg" alt="Camping site">
-				<img src="Assets/image/Camping4.jpg" alt="Camping site">
+				<img src="image/Camping3.jpg" alt="Camping site">
+				<img src="image/Camping4.jpg" alt="Camping site">
 				<br>
 				<h2>Slangkop tented camps</h2>
 				<p>Set between mountain, village and ocean, this SanParks-operated campsite provides
 					guests with a diverse natural landscape, within easy access of civilisation.
 					Its position on the Hoerikwaggo Trail makes it a convenient rest spot for those
 					looking to embark on an overnight hike. </p>
-					<img src="Assets/image/camping5.jpg" alt="Camping site">
-					<img src="Assets/image/Camping6.jpg" alt="Camping site">
+					<img src="image/camping5.jpg" alt="Camping site">
+					<img src="image/Camping6.jpg" alt="Camping site">
 					<footer>Website designed by Rustin Cassiem</footer>
 				</div>
 			</body>
