--- a/Contact.html
+++ b/Contact.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <link rel="stylesheet" href="Assets/css/contact.css" type="text/css">
-  <link rel="stylesheet" href="Assets/css/dropbox.css">
-  <link rel="stylesheet" href="Assets/css/style.css">
+  <link rel="stylesheet" href="css/contact.css" type="text/css">
+  <link rel="stylesheet" href="css/dropbox.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div id="wrapper">
     <div class="navbar">
-      <a href="Home.html">Home</a>
+      <a href="index.html">Home</a>
       <div class="dropdown">
         <button class="dropbtn">Category
           <i class="fa fa-caret-down"></i>
