--- a/Gallery.html
+++ b/Gallery.html
@@ -7,16 +7,16 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="HandheldFriendly" content="true">
-<link rel="stylesheet" href="Assets/css/style.css">
-<link rel="stylesheet" href="Assets/css/dropbox.css">
-<link rel="stylesheet" href="Assets/css/Grid.css">
-<script src="Assets/js/script.js" type="text/javascript"></script>
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/dropbox.css">
+<link rel="stylesheet" href="css/Grid.css">
+<script src="js/script.js" type="text/javascript"></script>
 <body>
 
 
   <div id="wrapper">
     <div class="navbar">
-      <a href="Home.html">Home</a>
+      <a href="index.html">Home</a>
       <div class="dropdown">
         <button class="dropbtn">Category
           <i class="fa fa-caret-down"></i>
@@ -35,33 +35,33 @@
       <h2>Hiking</h2>
       <div class="grid_main">
         <img src="https://imagesvc.timeincapp.com/v3/mm/image?url=http%3A%2F%2Fcdn-image.travelandleisure.com%2Fsites%2Fdefault%2Ffiles%2Fstyles%2F1600x1000%2Fpublic%2Flocal-experts-cape-town-best-hiking-trails.jpg%3Fitok%3DvEYerBOn&w=700&q=85"  height="450px" width="590px" alt="Hiking">
-        <img src="Assets/image/Gallery/Hiking2.jpg"  alt="Hiking">
-        <img src="Assets/image/Gallery/Hiking3.jpg"  alt="Hiking">
-        <img src="Assets/image/Gallery/Hiking4.jpg"  alt="Hiking">
+        <img src="image/Gallery/Hiking2.jpg"  alt="Hiking">
+        <img src="image/Gallery/Hiking3.jpg"  alt="Hiking">
+        <img src="image/Gallery/Hiking4.jpg"  alt="Hiking">
       </div>
 
       <h2>Rock Climbing</h2>
       <div class="grid_main">
-        <img src="Assets/image/Gallery/Rock1.jpg" alt="Rock Climbing">
-        <img src="Assets/image/Gallery/Rock2.jpg" alt="Rock Climbing">
-        <img src="Assets/image/Gallery/Rock3.jpg" alt="Rock Climbing">
-        <img src="Assets/image/Gallery/Rock4.jpg" alt="Rock Climbing">
+        <img src="image/Gallery/Rock1.jpg" alt="Rock Climbing">
+        <img src="image/Gallery/Rock2.jpg" alt="Rock Climbing">
+        <img src="image/Gallery/Rock3.jpg" alt="Rock Climbing">
+        <img src="image/Gallery/Rock4.jpg" alt="Rock Climbing">
       </div>
 
       <h2>Fishing</h2>
       <div class="grid_main">
-        <img src="Assets/image/Gallery/Fishing1.jpg" alt="Fishing">
-        <img src="Assets/image/Gallery/Fishing2.jpg" alt="Fishing">
-        <img src="Assets/image/Gallery/Fishing3.jpg" alt="Fishing">
-        <img src="Assets/image/Gallery/Fishing4.jpg" alt="Fishing">
+        <img src="image/Gallery/Fishing1.jpg" alt="Fishing">
+        <img src="image/Gallery/Fishing2.jpg" alt="Fishing">
+        <img src="image/Gallery/Fishing3.jpg" alt="Fishing">
+        <img src="image/Gallery/Fishing4.jpg" alt="Fishing">
       </div>
 
       <h1>Camping</h1>
       <div class="grid_main">
-        <img src="Assets/image/Gallery/Camping2.jpg" alt="Camping">
-        <img src="Assets/image/Gallery/Camping3.jpg"  alt="Camping">
-        <img src="Assets/image/Gallery/Camping4.jpg"  alt="Camping">
-        <img src="Assets/image/Gallery/camping5.jpg" alt="Camping">
+        <img src="image/Gallery/Camping2.jpg" alt="Camping">
+        <img src="image/Gallery/Camping3.jpg"  alt="Camping">
+        <img src="image/Gallery/Camping4.jpg"  alt="Camping">
+        <img src="image/Gallery/camping5.jpg" alt="Camping">
       </div>
 
     </section>
