--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<div id="wrapper">
 		<div class="navbar">
-			<a href="Home.html">Home</a>
+			<a href="index.html">Home</a>
 			<div class="dropdown">
 				<button class="dropbtn">Category
 					<i class="fa fa-caret-down"></i>
@@ -30,7 +30,7 @@
 
 
 		</div>
-	   <h1 class="Mainhead" >Outdoor Adventure</h1>
+	   <h1 class="Mainhead " >Outdoor Adventure</h1>
 	  <p class="centre">Nowhere in Africa can seriously compete with Cape Town when it comes to outrageous adventure<br>
 		 activities combined with a unique urban and outdoor playground like nowhere on earth.</p>
 		 <h1><a href="Hiking.html" class"color">Hiking</a></h1>
@@ -42,7 +42,7 @@
 		 <img src="image/Cape-Town.jpg"   alt="Mountain">
 		 <img src="image/Mountainclimb.jpg"  alt="Mountainclimb">
 		 <br>
-				<h1><a href="Rock_Climbing.html">Rock Climbing</a></h1>
+				<h1><a href="Rock_Climbing.html" class="h1">Rock Climbing</a></h1>
 				 <p>The Cape is full of mountains and provides a mecca of climbing. Cape Town being<br>
 					 the main center is a good base to start from. There are a few clubs mainly the MCSA <br>
 					 Cape Town Section which has over 1200 members and a bouldering wall in their club room. <br>
