new work and updated

--- a/Camping.html
+++ b/Camping.html
@@ -5,25 +5,14 @@
 	<title>Camping</title>
 </head>
 <link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/dropbox.css">
 <body>
 	<div id="wrapper">
 		<div class="navbar">
 			<a href="index.html">Home</a>
-			<div class="dropdown">
-				<button class="dropbtn">Category
-					<i class="fa fa-caret-down"></i>
-				</button>
-				<div class="dropdown-content">
-					<a href="Hiking.html" >Hiking</a>
-					<a href="Rock_Climbing.html">Rock Climbing</a>
-					<a href="Fishing.html">Fishing</a>
-					<a href="Camping.html">Camping</a>
-				</div>
-			</div>
 			<a href="Gallery.html">Gallery</a>
 			<a href="Contact.html">Contact Us</a>
 		</div>
+		<div id="Wolfkop">
 		<h1>Camping Areas</h1>
 		<h2>Wolfkop camping village</h2>
 		<p>A collection of camping villages on the banks of the Olifants River,
@@ -32,7 +21,7 @@
 			around heavy camping gear and making for a more comfortable camping adventure
 			that borders on glamping.</p>
 			<img src="image/camping1.jpg" alt="Camping site">
-			<img src="image/Camping2.jpg" alt="Camping site">
+			<img src="image/Camping2.jpg" alt="Camping site">	</div>
 			<br>
 			<h2>Slanghoek mountain resort</h2>
 			<p>Nestled in the magnificent Slanghoek Valley on the slopes of the Badsberg conservancy
@@ -44,6 +33,7 @@
 				<img src="image/Camping3.jpg" alt="Camping site">
 				<img src="image/Camping4.jpg" alt="Camping site">
 				<br>
+				<div id="Slangkop">			
 				<h2>Slangkop tented camps</h2>
 				<p>Set between mountain, village and ocean, this SanParks-operated campsite provides
 					guests with a diverse natural landscape, within easy access of civilisation.
@@ -51,6 +41,7 @@
 					looking to embark on an overnight hike. </p>
 					<img src="image/camping5.jpg" alt="Camping site">
 					<img src="image/Camping6.jpg" alt="Camping site">
+				</div>
 					<footer>Website designed by Rustin Cassiem</footer>
 				</div>
 			</body>
