--- a/Fishing.html
+++ b/Fishing.html
@@ -13,21 +13,10 @@
 	<div id="wrapper">
 		<div class="navbar">
 			<a href="index.html">Home</a>
-			<div class="dropdown">
-				<button class="dropbtn">Category
-					<i class="fa fa-caret-down"></i>
-				</button>
-				<div class="dropdown-content">
-					<a href="Hiking.html" >Hiking</a>
-					<a href="Rock_Climbing.html">Rock Climbing</a>
-					<a href="Fishing.html">Fishing</a>
-					<a href="Camping.html">Camping</a>
-				</div>
-			</div>
 			<a href="Gallery.html">Gallery</a>
 			<a href="Contact.html">Contact Us</a>
 		</div>
-
+   <div id="KommetjieBay">
 		<h1>Fishing in Cape Town</h1>
 		<p>If a heavy tug on your fishing line creates a tug at your heart, recreational fishing,
 			deep sea fishing, saltwater and freshwater fishing in and around Cape Town will certainly stir your fishing passion.</p>
@@ -38,8 +27,8 @@
 				you are looking for Big Game Fishing or something more along the lines of
 				a quiet fly-fishing trip. Cape Town also offers both saltwater and freshwater
 				fishing options, raging sea fishing or quiet rivers, streams and trout fishing in dams.</p>
-				<img src="image/Fishing1.jpeg" alt="Fishing">
-				<img src="image/Fishing2.jpeg" alt="Fishing">
+				<img src="image/Fishing1.jpg" alt="Fishing">
+				<img src="image/Fishing2.jpg" alt="Fishing"></div>
 				<br>
 				<h2>Fishing</h2>
 				<p>Fishing in Cape Town with Hooked On Africa is perfect for those who want to charter
@@ -51,13 +40,14 @@
 					we are the ultimate Fishing Charter Company in Cape Town</p>
 					<img src="image/Fishing3.jpg" alt="FishingFishing">
 					<img src="image/Fishing4.jpg" alt="Fishing">
+          <div id="Simon">
 					<h2>Simon's Town pier</h2>
 					<p>The Cape waters offer some of the richest fishing grounds in the world and
 						BIG BLUE SPORT FISHING CHARTERS is privileged to be located in these premium
 						fishing grounds, with quick and easy access to the tuna grounds and Cape Point,
 						famous for yellowtail fishing.</p>
 						<img src="image/Fishing5.jpg" alt="Fishing">
-						<img src="image/Fishing6.jpg" alt="Fishing">
+						<img src="image/Fishing6.jpg" alt="Fishing">					</div>
 						<footer>Website designed by Rustin Cassiem</footer>
 
 					</div>
