--- a/Rock_Climbing.html
+++ b/Rock_Climbing.html
@@ -8,22 +8,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="HandheldFriendly" content="true">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/dropbox.css">
   <body>
     <div id="wrapper">
   		<div class="navbar">
   			<a href="index.html">Home</a>
-  			<div class="dropdown">
-  				<button class="dropbtn">Category
-  					<i class="fa fa-caret-down"></i>
-  				</button>
-  				<div class="dropdown-content">
-  					<a href="Hiking.html" >Hiking</a>
-  					<a href="Rock_Climbing.html">Rock Climbing</a>
-  					<a href="Fishing.html">Fishing</a>
-  				 <a href="Camping.html">Camping</a>
-  				</div>
-  			</div>
   			<a href="Gallery.html">Gallery</a>
         <a href="Contact.html">Contact Us</a>
   		</div>
@@ -39,6 +27,7 @@
        <img src="image/rock1.jpg" alt="indoor climbing">
        <img src="image/Rock2.jpg" alt="indoor climbing ">
        <br>
+       <div id="indoor">
        <h2>Cape Town Rocks</h2>
         <p>Get ready to rock at CityROCK indoor climbing gym in Cape Town. With hundreds of routes,
            overhanging climbing sections and over 450m² of climbing area, the indoor climbing gym is
@@ -50,7 +39,8 @@
            off to reach your own personal summit.</p>
         <img src="image/Rock3.jpg" alt="indoor climmbing">
         <img src="image/Rock4.jpg" alt="indoor climbing ">
-
+     </div>
+     <div id="cape">
         <h2>Venture Forth International </h2>
         <p>Table Mountain offers rock climbers of all abilities world-class routes on high quality rock.
            The famous Mother City landmark itself offers inspiring traditional (“trad”) multi-pitch climbing
@@ -60,7 +50,7 @@
            enture Forth offers climbers the chance to experience Table Mountain and the surrounding crags in safety
             with a qualified rock climbing guide. Various options available from half-day sport climbing to full-day trad</p>
         <img src="image/Rock5.jpg" alt="outdoor climmbing">
-        <img src="image/Rock6.jpg" alt="outdoor climbing ">
+        <img src="image/Rock6.jpg" alt="outdoor climbing "></div>
     </div>
   </body>
 </html>
