--- a/Gallery.html
+++ b/Gallery.html
@@ -8,60 +8,45 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="HandheldFriendly" content="true">
 <link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/dropbox.css">
-<link rel="stylesheet" href="css/Grid.css">
 <script src="js/script.js" type="text/javascript"></script>
 <body>
-
-
   <div id="wrapper">
     <div class="navbar">
       <a href="index.html">Home</a>
-      <div class="dropdown">
-        <button class="dropbtn">Category
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content">
-          <a href="Hiking.html" >Hiking</a>
-          <a href="Rock_Climbing.html">Rock Climbing</a>
-          <a href="Fishing.html">Fishing</a>
-          <a href="Camping.html">Camping</a>
-        </div>
-      </div>
       <a href="Gallery.html">Gallery</a>
       <a href="Contact.html">Contact Us</a>
     </div>
     <section>
       <h2>Hiking</h2>
-      <div class="grid_main">
-        <img src="https://imagesvc.timeincapp.com/v3/mm/image?url=http%3A%2F%2Fcdn-image.travelandleisure.com%2Fsites%2Fdefault%2Ffiles%2Fstyles%2F1600x1000%2Fpublic%2Flocal-experts-cape-town-best-hiking-trails.jpg%3Fitok%3DvEYerBOn&w=700&q=85"  height="450px" width="590px" alt="Hiking">
-        <img src="image/Gallery/Hiking2.jpg"  alt="Hiking">
-        <img src="image/Gallery/Hiking3.jpg"  alt="Hiking">
-        <img src="image/Gallery/Hiking4.jpg"  alt="Hiking">
+      <div class="">
+        <img src="Gallery/Hiking1.jpg" alt="Hiking">
+        <img src="Gallery/Hiking1.jpg"  alt="Hiking">
+        <img src="Gallery/Hiking3.jpg"  alt="Hiking">
+        <img src="Gallery/Hiking4.jpg"  alt="Hiking">
       </div>
 
       <h2>Rock Climbing</h2>
-      <div class="grid_main">
-        <img src="image/Gallery/Rock1.jpg" alt="Rock Climbing">
-        <img src="image/Gallery/Rock2.jpg" alt="Rock Climbing">
-        <img src="image/Gallery/Rock3.jpg" alt="Rock Climbing">
-        <img src="image/Gallery/Rock4.jpg" alt="Rock Climbing">
+      <div class="">
+        <img src="Gallery/Rock1.jpg" alt="Rock Climbing">
+        <img src="Gallery/Rock2.jpg" alt="Rock Climbing">
+        <img src="Gallery/Rock6.jpg" alt="Rock Climbing">
+        <img src="Gallery/Rock5.jpg" alt="Rock Climbing">
       </div>
 
       <h2>Fishing</h2>
-      <div class="grid_main">
-        <img src="image/Gallery/Fishing1.jpg" alt="Fishing">
-        <img src="image/Gallery/Fishing2.jpg" alt="Fishing">
-        <img src="image/Gallery/Fishing3.jpg" alt="Fishing">
-        <img src="image/Gallery/Fishing4.jpg" alt="Fishing">
+      <div class="">
+        <img src="Gallery/Fishing1.jpg" alt="Fishing">
+        <img src="Gallery/Fishing2.jpg" alt="Fishing">
+        <img src="Gallery/Fishing1.jpg" alt="Fishing">
+        <img src="Gallery/Fishing4.jpg" alt="Fishing">
       </div>
 
       <h1>Camping</h1>
-      <div class="grid_main">
-        <img src="image/Gallery/Camping2.jpg" alt="Camping">
-        <img src="image/Gallery/Camping3.jpg"  alt="Camping">
-        <img src="image/Gallery/Camping4.jpg"  alt="Camping">
-        <img src="image/Gallery/camping5.jpg" alt="Camping">
+      <div class="">
+        <img src="Gallery/Camping5.jpg" alt="Camping">
+        <img src="Gallery/Camping4.jpg"  alt="Camping">
+        <img src="Gallery/Camping4.jpg"  alt="Camping">
+        <img src="Gallery/camping5.jpg" alt="Camping">
       </div>
 
     </section>
