--- a/Hiking.html
+++ b/Hiking.html
@@ -5,26 +5,14 @@
 	<title></title>
 </head>
 <link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/dropbox.css">
 <body>
 	<div id="wrapper">
 		<div class="navbar">
 			<a href="index.html">Home</a>
-			<div class="dropdown">
-				<button class="dropbtn">Category
-					<i class="fa fa-caret-down"></i>
-				</button>
-				<div class="dropdown-content">
-					<a href="Hiking.html" >Hiking</a>
-					<a href="Rock_Climbing.html">Rock Climbing</a>
-					<a href="Fishing.html">Fishing</a>
-					<a href="Camping.html">Camping</a>
-				</div>
-			</div>
 			<a href="Gallery.html">Gallery</a>
 			<a href="Contact.html">Contact Us</a>
 		</div>
-
+   <div id="lion">
 		<h1>Hiking spots</h1>
 		<h2>Walk Up Lions Head</h2>
 		<p>Lions Head in Cape Town is the distinctive shaped mountain slope found alongside Table Mountain.
@@ -33,21 +21,22 @@
 			and Robben Island. It is a spectacular walk to the top and although it can be quite steep at times, the stunning views
 			of Cape Town on the way up will keep you motivated to reach the top</p>
 			<img src="image/Lions_Head1.jpg" alt="Close up of Lions Head">
-			<img src="image/Lions_Head3.jpg" alt="Close up of Lions Head">
+			<img src="image/Lions_Head3.jpg" alt="Close up of Lions Head"></div>
 			<br>
-			<h2>Table Mountain</h2>
+		  <div id="table">
+		   <h2>Table Mountain</h2>
 			<p>A ride up our famous cable car is possibly one of the very best ways to experience Cape Town,
 				and yet it’s still on the bucket list of many Capetonians, who have yet to experience the thrill.
 				There’s no time like the present to take advantage of the wonderful specials listed below:</p>
-				<img src="image/tablemountain.jpg" alt="table Mountain"  >
-				<img src="image/table-mountain-cable-car-2018.jpg" alt="table Mountain">
+				<img src="image/tablemountain.jpg" alt="table Mountain">
+				<img src="image/tablemountain.jpg" alt="table Mountain"></div>
 				<br>
 				<h2>Elephant's eye cave in silvermine</h2>
 				<p>The walk up to Elephant’s Eye Cave on the Tokai side of  Silvermine Nature Reserve  is a pleasant,
 					easy going hike that takes about two hours to do from the parking area near the dam in Silvermine
 					Nature Reserve. It is a fun trail to do with young children.</p>
 					<img src="image/Eeye.jpg" alt="Elephant_Eye">
-					<img src="image/insideEeye.jpg" alt="Elephant_Eye">
+					<img src="image/Eeye.jpg" alt="Elephant_Eye">
 					<footer>Website designed by Rustin Cassiem</footer>
 				</div>
 			</body>
