--- a/Contact.html
+++ b/Contact.html
@@ -14,9 +14,9 @@
       <a href="Gallery.html">Gallery</a>
       <a href="Contact.html">Contact Us</a>
     </div>
-    <form>
-       <h1>Contact Us</h1>
+    <form class="container">
       <table>
+        <h1>Contact Us</h1>
         <tr><td><label for="Name"><b>Your full name</b></label></td><td><input type="text" placeholder="Sam Winchester" name="First Name" id="check" required></td></tr>
         <tr><td><label for="Name"><b>Email</b></label></td><td><input type="text" placeholder="sam@mail.com" name="Email" id="check" required></td></tr>
         <tr><td><label for="Name"><b>cell number</b></label></td><td><input type="text" placeholder="" name="Number" id="check" required></td></tr>
@@ -30,21 +30,7 @@
         </select></tr>
         <tr><td><label><b>Enquiries</b></label></td><td><textarea name="Optional" maxlength="50000" rows="3px" cols="40px"></textarea></td></tr>
         <tr><td><button type="submit" onclick="myFunction()">Submit</button></td></tr>
-
-
       </form>
     </div>
-
-    </div>
-    <script type="text/javascript">
-    var firstName=document.getElementById("fname").value;
-    function myFunction(){
-      if(true){
-      }
-      else{
-        alert("Thank you for sumbitting");
-      }
-    }
-   </script>
   </body>
  </html>
